--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/css/menu.css">
-<link rel="stylesheet" href="/css/icons.css">
+<link rel="stylesheet" href="https://robinvanloonowasp.github.io/hugo-guide/css/menu.css">
+<link rel="stylesheet" href="https://robinvanloonowasp.github.io/hugo-guide/css/icons.css">
 <nav class="pv3 ph3 ph4-ns" role="navigation">
     <div class="flex-l justify-between items-center center">
       <a href="{{ .Site.BaseURL }}" class="f3 fw2 hover-white no-underline white-90 dib">
